objects/AMX_Engine_Log__c.object
<CustomObject>
    <fields>
        <fullName>Log_DateTime__c</fullName>
        <description>Datetime that represents when this log entry was created.  We use this field instead of relying on the System &quot;createdDate&quot; field because scheduler log entries are created during the execution of the Distribution Engine, but are only flushed at the end of the process.</description>
        <inlineHelpText>Datetime that represents when this log entry was created.  We use this field instead of relying on the System &quot;createdDate&quot; field because scheduler log entries are created during the execution of the Distribution Engine, but are only flushed at the end.</inlineHelpText>
        <label>Log DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Message__c</fullName>
        <description>Contains the long-form message string for this log entry.  This could be an error message, a status message, or any other type of message.  See the &quot;Log Type&quot; field to learn what type of message is being saved.</description>
        <label>Log Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Type__c</fullName>
        <defaultValue>&quot;UNKNOWN&quot;</defaultValue>
        <description>Describes the type of this specific Scheduler log entry.  We might put some additional info, like a status message, in this field as well.</description>
        <label>Log Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Queueable_Job_Id__c</fullName>
        <description>The Apex Job ID of the next Queueable class.</description>
        <label>Next Queueable Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Job_ID__c</fullName>
        <description>The Apex Job ID of the next run of the AMX Scheduler.</description>
        <label>Next Scheduled Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queueable_Job_ID__c</fullName>
        <description>Apex Job ID of the Queueable job that was launched by this run of the AMX Scheduler.  Subsequent runs should check to see if this Queued job is still running, and not start a &quot;new&quot; instance of Distribution Engine if it is.</description>
        <label>Queueable Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Records_Assigned__c</fullName>
        <description>The number of records that were assigned during this scheduled run.</description>
        <label>Records Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_Job_ID__c</fullName>
        <description>The Job ID of the currently scheduled / running Apex job for the AMX_Scheduler class.</description>
        <label>Scheduled Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Assignment_Engine_Logs</fullName>
        <columns>NAME</columns>
        <columns>Log_DateTime__c</columns>
        <columns>Log_Type__c</columns>
        <columns>Log_Message__c</columns>
        <columns>Scheduled_Job_ID__c</columns>
        <columns>Queueable_Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Assignment Engine Logs</label>
    </listViews>
    <listViews>
        <fullName>Date_Ranged_ASYNC_ENGINE_FINISH_Logs</fullName>
        <columns>NAME</columns>
        <columns>Log_DateTime__c</columns>
        <columns>Log_Type__c</columns>
        <columns>Log_Message__c</columns>
        <columns>Scheduled_Job_ID__c</columns>
        <columns>Queueable_Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Log_DateTime__c</field>
            <operation>greaterOrEqual</operation>
            <value>6/19/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Log_DateTime__c</field>
            <operation>lessOrEqual</operation>
            <value>6/19/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Log_Type__c</field>
            <operation>equals</operation>
            <value>ASYNC ENGINE FINISH</value>
        </filters>
        <label>Date Ranged ASYNC ENGINE FINISH Logs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Date_Ranged_Assignment_Engine_Logs</fullName>
        <columns>NAME</columns>
        <columns>Log_DateTime__c</columns>
        <columns>Log_Type__c</columns>
        <columns>Log_Message__c</columns>
        <columns>Scheduled_Job_ID__c</columns>
        <columns>Queueable_Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Log_DateTime__c</field>
            <operation>greaterOrEqual</operation>
            <value>8/20/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>Log_DateTime__c</field>
            <operation>lessOrEqual</operation>
            <value>8/21/2015 12:00 AM</value>
        </filters>
        <label>Date Ranged Assignment Engine Logs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Engine_Exception_Logs</fullName>
        <columns>NAME</columns>
        <columns>Log_DateTime__c</columns>
        <columns>Log_Type__c</columns>
        <columns>Log_Message__c</columns>
        <columns>Scheduled_Job_ID__c</columns>
        <columns>Queueable_Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Log_Type__c</field>
            <operation>contains</operation>
            <value>EXCEPTION</value>
        </filters>
        <label>Engine Exception Logs</label>
    </listViews>
    <listViews>
        <fullName>Scheduler_Start_Stop_Activity</fullName>
        <columns>NAME</columns>
        <columns>Log_DateTime__c</columns>
        <columns>Log_Type__c</columns>
        <columns>Log_Message__c</columns>
        <columns>Scheduled_Job_ID__c</columns>
        <columns>Queueable_Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Log_Type__c</field>
            <operation>contains</operation>
            <value>SCHEDULER</value>
        </filters>
        <label>Scheduler Start / Stop Activity</label>
        <language>en_US</language>
    </listViews>
</CustomObject>